[gd_scene load_steps=3 format=2]

[ext_resource path="res://00050-1327905268.png" type="Texture" id=1]
[ext_resource path="res://CardGame.gd" type="Script" id=2]

[node name="CardGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Hexagon" type="TextureRect" parent="."]
margin_left = 220.0
margin_top = -8.0
margin_right = 1244.0
margin_bottom = 1016.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="RegisterOpponent" type="Button" parent="."]
margin_left = 16.0
margin_top = 95.0
margin_right = 192.0
margin_bottom = 115.0
mouse_default_cursor_shape = 2
text = "Register OPPONENT Deck"

[node name="RegisterPlayer" type="Button" parent="."]
margin_left = 16.0
margin_top = 40.0
margin_right = 192.0
margin_bottom = 60.0
mouse_default_cursor_shape = 2
text = "Register PLAYER Deck"

[node name="StartGame" type="Button" parent="."]
margin_left = 16.0
margin_top = 254.0
margin_right = 192.0
margin_bottom = 274.0
mouse_default_cursor_shape = 2
text = "Start Game"

[node name="ResetGame" type="Button" parent="."]
margin_left = 16.0
margin_top = 307.0
margin_right = 192.0
margin_bottom = 327.0
mouse_default_cursor_shape = 2
text = "Reset Game"

[node name="OpponentCard" type="Label" parent="."]
margin_left = 392.0
margin_top = 213.0
margin_right = 506.0
margin_bottom = 244.0
text = "Opponent Played:
"

[node name="YourCard" type="Label" parent="."]
margin_left = 392.0
margin_top = 343.0
margin_right = 506.0
margin_bottom = 374.0
text = "You Played:
"

[node name="YourHand" type="Label" parent="."]
margin_left = 856.0
margin_top = 287.0
margin_right = 970.0
margin_bottom = 318.0
text = "Your Hand:
"

[node name="PickCard" type="Label" parent="."]
margin_left = 853.0
margin_top = 443.0
margin_right = 967.0
margin_bottom = 474.0
text = "Pick Card:
"

[node name="CardIndex" type="LineEdit" parent="."]
margin_left = 854.0
margin_top = 464.0
margin_right = 912.0
margin_bottom = 488.0

[node name="PlayCard" type="Button" parent="."]
margin_left = 834.0
margin_top = 513.0
margin_right = 1010.0
margin_bottom = 533.0
mouse_default_cursor_shape = 2
text = "Play Card"
